[package]
name = "nia"
version = "0.1.0"
authors = ["kerryeon <besqer996@gnu.ac.kr>"]
edition = "2018"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
incremental = false
lto = true
panic = 'unwind'

[dependencies]
cranelift = "0.28.0"
cranelift-module = "0.28.0"
cranelift-simplejit = "0.28.0"
